; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ti-adc084s021.c_adc084s021_buffer_postdisable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ti-adc084s021.c_adc084s021_buffer_postdisable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.adc084s021 = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*)* @adc084s021_buffer_postdisable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adc084s021_buffer_postdisable(%struct.iio_dev* %0) #0 {
  %2 = alloca %struct.iio_dev*, align 8
  %3 = alloca %struct.adc084s021*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %2, align 8
  %4 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %5 = call %struct.adc084s021* @iio_priv(%struct.iio_dev* %4)
  store %struct.adc084s021* %5, %struct.adc084s021** %3, align 8
  %6 = load %struct.adc084s021*, %struct.adc084s021** %3, align 8
  %7 = getelementptr inbounds %struct.adc084s021, %struct.adc084s021* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 4, i32* %8, align 4
  %9 = load %struct.adc084s021*, %struct.adc084s021** %3, align 8
  %10 = getelementptr inbounds %struct.adc084s021, %struct.adc084s021* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @regulator_disable(i32 %11)
  ret i32 %12
}

declare dso_local %struct.adc084s021* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
